2011-11-18  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* tree-outof-ssa.c (insert_back_edge_copies):  Add call to
	mark_dfs_back_edges.

2011-11-18  Iain Sandoe  <iains@gcc.gnu.org>

	PR target/49992
	* configure.ac: Remove ranlib special-casing for Darwin.
	* configure: Regenerate.

2011-11-18  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/51118
	* fold-const.c (fold_checksum_tree): Check for TS_TYPED structure
	before using TREE_TYPE accessor on expr.

2011-11-17  Jan Hubicka  <jh@suse.cz>

	PR bootstrap/51134
	* i386.c (atom_cost): Fix 32bit memset description.
	(expand_set_or_movmem_via_loop_with_iter): Output proper bounds check
	for epilogue loops.
	(expand_movmem_epilogue): Handle epilogues up to size 15 w/o producing
	byte loop.
	(decide_alg): sse_loop is not useable wthen SSE2 is disabled;
	when not optimizing always use rep movsb or lincall; do not produce
	word sized loops when optimizing memset for size (to avoid need
	for large constants).
	(ix86_expand_movmem): Get into sync with ix86_expand_setmem;
	choose unroll factors better; always do 128bit moves when producing
	SSE loops; do not produce loopy epilogue when size is too small.
	(promote_duplicated_reg_to_size): Do not look into desired alignments
	when doing vector expansion.
	(ix86_expand_setmem): Track better when promoted value is available;
	choose unroll factors more sanely. Output loopy epilogue only
	when needed.

2011-11-17  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/51144
	* output.h (fprint_w): Remove.
	* final.c (fprint_w): Remove.
	(output_addr_const): Change fprint_w back to fprintf.

2011-11-17  Andrew Pinski  <apinski@cavium.com>

	* config/host-linux.c (TRY_EMPTY_VM_SPACE): Define for MIPS.

2011-11-17  Andrew MacLeod  <amacleod@redhat.com>

	* builtins.c (expand_builtin): Remove 4th parameter representing
	weak/strong mode when __atomic_compare_exchange becomes a library call.

2011-11-17  Richard Henderson  <rth@redhat.com>
